# ibus-tmpl

./: Makefile.am  README  README.md  configure.ac  ibus-tmpl.spec.in
engine/: Makefile.am  enchant-python.xml.in.in  enchant.engine.in  engine.py  factory.py  ibus-engine-enchant.in  main.py
icons/: Makefile.am
m4/: Makefile.am
po/: zh_CN.po
src/: Makefile.am  enchant.xml.in.in  engine.c  engine.h  main.c  rustpinyin.h  rustpinyin.xml.in.in
